Include circulation quality

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               </div>
               <div class="half-em-margin">
                 <h4 class="key">Total Circulation</h4>
-                <p id="total-circulation">-</p>
+                <p><span id="total-circulation">-</span> <span id="circulation-quality"></span></p>
               </div>
             </div>
             <div class="tooltip-data flex sb">
