DO NOT MERGE TO MASTER: add clearer language to line chart

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
         </div>
         <div id="range-chart"></div>
-        <p class="caption">Click and drag on the lower chart to select a time range.</p>
+        <p class="caption">Click and drag on the lower chart to zoom in on a selected time range.</p>
       </div>
       <div class='choropleth-container'>
           <div class="chart-header">
