Fix render bug and add clickability to choropleth

--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
                 value="rawData"
                 />
               <label for="renderOption1">Raw Data</label>
-
-
+              <button id="clearGeoFilterButton" class="switch-button hide">
+               Show All States
+              </button>
             </div>
           </div>
           <div class="choropleth-data">
