Use moment.js and update all dates to use moment objects in utc

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
   <script src="assets/js/d3.js"></script>
   <script type="text/javascript" src="assets/js/crossfilter.js"></script>
   <script type="text/javascript" src="assets/js/dc.min.js"></script>
-  <script src="assets/js/dateformat.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
   <script src="assets/js/awesomplete.min.js"></script>
   <script type="module" src="assets/js/index.js"></script>
