--- a/index.html
+++ b/index.html
@@ -146,8 +146,13 @@
               </figcaption>
             </div>
             <div class="tooltip-data">
-              <h4 class="key">Editorial Notes</h4>
+              <h4 class="key">Special Notes</h4>
               <figcaption id="special-note">
+              </figcaption>
+            </div>
+            <div class="tooltip-data">
+              <h4 class="key">Editorial Notes</h4>
+              <figcaption id="editorial-note">
               </figcaption>
             </div>
           </div>
