--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
               </figcaption>
             </div>
             <div class="tooltip-data">
-              <h4 class="key">Special Notes</h4>
+              <h4 class="key">Special Notes for this Issue</h4>
               <figcaption id="special-note">
               </figcaption>
             </div>
