Various upgrades to special notes behavior

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
               <figcaption id="titles-included">
               </figcaption>
             </div>
-            <div class="tooltip-data">
+            <div class="tooltip-data hide">
               <h4 class="key">Special Notes for this Issue</h4>
               <figcaption id="special-note">
               </figcaption>
