Load multiple data sets

--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
 
 <body>
   <div class="container">
-    <div class="select-field">
-      <label for="title-select">Search Titles:</label>
-      <input name="title-select" id="title-select">
-    </div>
+    <h2>Search Magazine Titles</h2>
+    <div class="select-field" id="select-field"></div>
 
     <div class="charts">
       <div class="line-chart-container">
