Tentative first go at multi-source charts

--- a/index.html
+++ b/index.html
@@ -46,18 +46,21 @@
             <div class="chart-header">
               <h3 class="title">Circulation By State</h3>
               <div class="switch-field">
-                <input type="radio" id="renderOption2"
-                 name="chart-group" value="percentOfPopulation"
-                 checked
-                 />
-                <label for="renderOption2">% of Population</label>
                 <input
                   type="radio"
-                  id="renderOption1"
-                  name="chart-group"
+                  id="title1RenderOption1"
+                  name="title1"
+                  value="percentOfPopulation"
+                  checked
+                 />
+                <label for="title1RenderOption1">% of Population</label>
+                <input
+                  type="radio"
+                  id="title1RenderOption2"
+                  name="title1"
                   value="rawData"
                   />
-                <label for="renderOption1">Raw Data</label>
+                <label for="title1RenderOption2">Raw Data</label>
                 <button id="clearGeoFilterButton" class="switch-button hide">
                  Show All States
                 </button>
@@ -71,37 +74,37 @@
                 <div class="tooltip-data flex sb">
                   <div class="half-em-margin">
                     <h4 class="key">Sample Issue Date (for Geodata)</h4>
-                    <p id="geo-issue-date"> - </p>
+                    <p id="title1-geo-issue-date"> - </p>
                   </div>
                 </div>
                 <div class="tooltip-data flex sb">
                   <div class="half-em-margin">
                     <h4 class="key">State</h4>
-                    <p id="selected-state">-</p>
+                    <p id="title1-selected-state">-</p>
                   </div>
                   <div class="half-em-margin">
                     <h4 class="key">Total State Circulation</h4>
-                    <p id="state-circulation">-</p>
+                    <p id="title1-state-circulation">-</p>
                   </div>
                 </div>
                 <div class="tooltip-data flex sb">
                   <div class="half-em-margin">
                     <h4 class="key">% of State Population</h4>
-                    <p id="state-pop"> -</p>
+                    <p id="title1-state-pop"> -</p>
                   </div>
                   <div class="half-em-margin">
                     <h4 class="key">% of Total Circulation</h4>
-                    <p id="percent-of-total">-</p>
+                    <p id="title1-percent-of-total">-</p>
                   </div>
                 </div>
                 <div class="tooltip-data flex sb">
                   <div class="half-em-margin">
                     <h4 class="key">Mail Subscriptions</h4>
-                    <p id="mail-subscriptions"> - </p>
+                    <p id="title1-mail-subscriptions"> - </p>
                    </div>
                   <div class="half-em-margin">
                     <h4 class="key">Single Copy Sales</h4>
-                    <p id="single-copy-sales"> - </p>
+                    <p id="title1-single-copy-sales"> - </p>
                    </div>
                 </div>
                 <div class="tooltip-data flex sb">
@@ -114,44 +117,44 @@
               <div class="tooltip-data flex sb">
                 <div class="half-em-margin">
                   <h4 class="key">Title</h4>
-                  <p id="non-canon-title">-</p>
+                  <p id="title1-non-canon-title">-</p>
                 </div>
                 <div class="half-em-margin">
                   <h4 class="key">Issue Date</h4>
-                  <p id="issue-date"> - </p>
+                  <p id="title1-issue-date"> - </p>
                 </div>
                 <div class="half-em-margin">
                   <h4 class="key">Total Circulation</h4>
-                  <p><span id="total-circulation">-</span> <span id="circulation-quality"></span></p>
+                  <p><span id="title1-total-circulation">-</span> <span id="title1-circulation-quality"></span></p>
                 </div>
               </div>
               <div class="tooltip-data flex sb">
                 <div class="half-em-margin">
                   <h4 class="key">Publishing Company</h4>
-                  <p id="issue-publisher">-</p>
+                  <p id="title1-issue-publisher">-</p>
                 </div>
                 <div class="half-em-margin">
                   <h4 class="key">Editor</h4>
-                  <p id="issue-editor">-</p>
+                  <p id="title1-issue-editor">-</p>
                 </div>
                 <div class="half-em-margin">
                   <h4 class="key">Price</h4>
-                  <p id="issue-price">-</p>
+                  <p id="title1-issue-price">-</p>
                 </div>
               </div>
               <div class="tooltip-data">
                 <h4 class="key">Titles Included</h4>
-                <figcaption id="titles-included">
+                <figcaption id="title1-titles-included">
                 </figcaption>
               </div>
               <div class="tooltip-data hide">
                 <h4 class="key">Special Notes for this Issue</h4>
-                <figcaption id="special-note">
+                <figcaption id="title1-special-note">
                 </figcaption>
               </div>
               <div class="tooltip-data">
                 <h4 class="key">Editorial Notes</h4>
-                <figcaption id="editorial-note">
+                <figcaption id="title1-editorial-note">
                 </figcaption>
               </div>
             </div>
@@ -160,18 +163,21 @@
             <div class="chart-header">
               <h3 class="title">Circulation By State</h3>
               <div class="switch-field">
-                <input type="radio" id="renderOption2"
-                 name="chart-group" value="percentOfPopulation"
-                 checked
-                 />
-                <label for="renderOption2">% of Population</label>
                 <input
                   type="radio"
-                  id="renderOption1"
-                  name="chart-group"
+                  id="title2RenderOption1"
+                  name="title2"
+                  value="percentOfPopulation"
+                  checked
+                 />
+                <label for="title2RenderOption1">% of Population</label>
+                <input
+                  type="radio"
+                  id="title2RenderOption2"
+                  name="title2"
                   value="rawData"
                   />
-                <label for="renderOption1">Raw Data</label>
+                <label for="title2RenderOption2">Raw Data</label>
                 <button id="clearGeoFilterButton" class="switch-button hide">
                  Show All States
                 </button>
@@ -185,37 +191,37 @@
                 <div class="tooltip-data flex sb">
                   <div class="half-em-margin">
                     <h4 class="key">Sample Issue Date (for Geodata)</h4>
-                    <p id="geo-issue-date"> - </p>
+                    <p id="title2-geo-issue-date"> - </p>
                   </div>
                 </div>
                 <div class="tooltip-data flex sb">
                   <div class="half-em-margin">
                     <h4 class="key">State</h4>
-                    <p id="selected-state">-</p>
+                    <p id="title2-selected-state">-</p>
                   </div>
                   <div class="half-em-margin">
                     <h4 class="key">Total State Circulation</h4>
-                    <p id="state-circulation">-</p>
+                    <p id="title2-state-circulation">-</p>
                   </div>
                 </div>
                 <div class="tooltip-data flex sb">
                   <div class="half-em-margin">
                     <h4 class="key">% of State Population</h4>
-                    <p id="state-pop"> -</p>
+                    <p id="title2-state-pop"> -</p>
                   </div>
                   <div class="half-em-margin">
                     <h4 class="key">% of Total Circulation</h4>
-                    <p id="percent-of-total">-</p>
+                    <p id="title2-percent-of-total">-</p>
                   </div>
                 </div>
                 <div class="tooltip-data flex sb">
                   <div class="half-em-margin">
                     <h4 class="key">Mail Subscriptions</h4>
-                    <p id="mail-subscriptions"> - </p>
+                    <p id="title2-mail-subscriptions"> - </p>
                    </div>
                   <div class="half-em-margin">
                     <h4 class="key">Single Copy Sales</h4>
-                    <p id="single-copy-sales"> - </p>
+                    <p id="title2-single-copy-sales"> - </p>
                    </div>
                 </div>
                 <div class="tooltip-data flex sb">
@@ -228,44 +234,44 @@
               <div class="tooltip-data flex sb">
                 <div class="half-em-margin">
                   <h4 class="key">Title</h4>
-                  <p id="non-canon-title">-</p>
+                  <p id="title2-non-canon-title">-</p>
                 </div>
                 <div class="half-em-margin">
                   <h4 class="key">Issue Date</h4>
-                  <p id="issue-date"> - </p>
+                  <p id="title2-issue-date"> - </p>
                 </div>
                 <div class="half-em-margin">
                   <h4 class="key">Total Circulation</h4>
-                  <p><span id="total-circulation">-</span> <span id="circulation-quality"></span></p>
+                  <p><span id="title2-total-circulation">-</span> <span id="title2-circulation-quality"></span></p>
                 </div>
               </div>
               <div class="tooltip-data flex sb">
                 <div class="half-em-margin">
                   <h4 class="key">Publishing Company</h4>
-                  <p id="issue-publisher">-</p>
+                  <p id="title2-issue-publisher">-</p>
                 </div>
                 <div class="half-em-margin">
                   <h4 class="key">Editor</h4>
-                  <p id="issue-editor">-</p>
+                  <p id="title2-issue-editor">-</p>
                 </div>
                 <div class="half-em-margin">
                   <h4 class="key">Price</h4>
-                  <p id="issue-price">-</p>
+                  <p id="title2-issue-price">-</p>
                 </div>
               </div>
               <div class="tooltip-data">
                 <h4 class="key">Titles Included</h4>
-                <figcaption id="titles-included">
+                <figcaption id="title2-titles-included">
                 </figcaption>
               </div>
               <div class="tooltip-data hide">
                 <h4 class="key">Special Notes for this Issue</h4>
-                <figcaption id="special-note">
+                <figcaption id="title2-special-note">
                 </figcaption>
               </div>
               <div class="tooltip-data">
                 <h4 class="key">Editorial Notes</h4>
-                <figcaption id="editorial-note">
+                <figcaption id="title2-editorial-note">
                 </figcaption>
               </div>
             </div>
