Fix problems with choropleth rendering

--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
 
 <body>
   <div class="container">
-    <h2>Search Magazine Titles</h2>
-    <div class="select-field" id="select-field"></div>
+    <div class="search-container">
+      <h2>Search Magazine Titles:</h2>
+      <div class="select-field" id="select-field"></div>
+    </div>
 
     <div class="charts">
       <div class="line-chart-container">
@@ -61,7 +63,7 @@
                   value="rawData"
                   />
                 <label for="title1RenderOption2">Raw Data</label>
-                <button id="clearGeoFilterButton" class="switch-button hide">
+                <button id="title1ClearGeoFilterButton" class="switch-button hide">
                  Show All States
                 </button>
               </div>
@@ -178,7 +180,7 @@
                   value="rawData"
                   />
                 <label for="title2RenderOption2">Raw Data</label>
-                <button id="clearGeoFilterButton" class="switch-button hide">
+                <button id="title2ClearGeoFilterButton" class="switch-button hide">
                  Show All States
                 </button>
               </div>
