Update styling and first stab at making second title optional

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="charts">
       <div class="line-chart-container">
         <div id="line-chart">
-            <div class='chart-header'>
+            <div class='chart-header bg-grey'>
               <h3 class="title">Circulation Data</h3>
               <div class="switch-field">
                 <button id="clearIssueFilterButton" class="switch-button hide">
@@ -45,7 +45,7 @@
       </div>
       <div class="choropleth-container">
         <div class='choropleth-instance'>
-            <div class="chart-header">
+            <div class="chart-header bg-blue">
               <h3 class="title">Circulation By State</h3>
               <div class="switch-field">
                 <input
@@ -162,7 +162,7 @@
             </div>
         </div>
         <div class='choropleth-instance'>
-            <div class="chart-header">
+            <div class="chart-header bg-red">
               <h3 class="title">Circulation By State</h3>
               <div class="switch-field">
                 <input
