Generalize functions across titles

--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
               </div>
             </div>
         </div>
-        <div id="range-chart"></div>
-        <p class="caption">Click and drag on the lower chart to zoom in on a selected time range.</p>
+        <p class="caption">Hover and click to view and select a specific issue.</p>
       </div>
       <div class="choropleth-container">
         <div class='choropleth-instance'>
