--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="charts">
       <div class="line-chart-container">
         <div id="line-chart">
-            <div class='chart-header'>
+            <div class='chart-header bg-grey'>
               <h3 class="title">Circulation Data</h3>
               <div class="switch-field">
                 <button id="clearIssueFilterButton" class="switch-button hide">
@@ -40,12 +40,11 @@
               </div>
             </div>
         </div>
-        <div id="range-chart"></div>
-        <p class="caption">Click and drag on the lower chart to zoom in on a selected time range.</p>
+        <p class="caption">Hover and click to view and select a specific issue.</p>
       </div>
       <div class="choropleth-container">
         <div class='choropleth-instance'>
-            <div class="chart-header">
+            <div class="chart-header bg-blue">
               <h3 class="title">Circulation By State</h3>
               <div class="switch-field">
                 <input
@@ -162,7 +161,7 @@
             </div>
         </div>
         <div class='choropleth-instance'>
-            <div class="chart-header">
+            <div class="chart-header bg-red">
               <h3 class="title">Circulation By State</h3>
               <div class="switch-field">
                 <input
